Quorum3/Library/Tests/Actions/Pass/MultipleNestedFunctionCallsWithAssignmentsDouble.quorum
class Main
    action Main
       number a = multiply(multiply(2.0, 2.0), multiply(2.0, 2.0))
       a = multiply(multiply(a, a), multiply(a, a))
       output a
    end

    action multiply(number a, number b) returns number
        return a * b
    end
end