Quorum3/Library/Tests/Actions/Fail/BadVariableInParameter.quorum
use Libraries.System.File

class BadVariableInParameter 
    action Main
       File file
       Test(dog, 0.0) 
    end

    action Test(File a, number b)

    end
end